--- a/Problema/assets/sass/header.scss
+++ b/Problema/assets/sass/header.scss
@@ -2,6 +2,7 @@ $color_gris:#e5deda;
 $color_letra_gris:#655f5a;
 $fuente_primaria:Raleway;
 $fondo_guinda:#dd1d43;
+$fondo_negro:#212121;
 body{
   font-family: $fuente_primaria;
 }
@@ -38,4 +39,48 @@ margin: 0px;
 .second-list:hover{
 background-color: $fondo_guinda;
 padding: 4%;
+}
+.box{
+  margin-bottom: 4%;
+  border: 2px solid white;
+  padding:2%; 
+}
+.box1{
+  margin-bottom: 15%;
+}
+.accesories{
+  padding:2%;
+}
+.pagination>li>a:focus{
+  color: #171414;
+}
+.pagination>li>a, .pagination>li>span{
+  border:none;
+  color:$color_letra_gris;
+}
+.precio{
+  color:$fondo_guinda
+}
+.trought{
+  text-decoration:line-through;
+  color:$color_gris;
+}
+.ofert{
+  background-color:$fondo_guinda;
+  border:none;
+  color: #F9F4F3;
+  padding:3%;
+  position:absolute;
+}
+.sale{
+  background-color:$fondo_negro;
+}
+.banner{
+  background-image: url('../images/client-bg.jpg');
+  padding:5%;
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
+.bottom{
+  margin-bottom: 10%;
 }
