--- a/Problema/assets/css/header.css
+++ b/Problema/assets/css/header.css
@@ -99,3 +99,12 @@ body {
 .bottom {
   margin-bottom: 10%;
 }
+
+.box-span {
+  border: 1px solid black;
+}
+
+#icon {
+  font-size: 30px;
+  margin-left: 10px;
+}
