--- a/Problema/assets/sass/header.scss
+++ b/Problema/assets/sass/header.scss
@@ -84,3 +84,10 @@ padding: 4%;
 .bottom{
   margin-bottom: 10%;
 }
+.box-span{
+  border:1px solid black;
+}
+#icon{
+  font-size: 30px;
+  margin-left: 10px;
+}
