--- a/Problema/assets/jade/index.jade
+++ b/Problema/assets/jade/index.jade
@@ -7,10 +7,9 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet")
+    link(rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css")
     link(href="css/font-awesome.min.css" rel="stylesheet")
-    link(href="css/main1.css" rel="stylesheet")
-    link(href="css/header.css" rel="stylesheet")
-    link(href="css/footer.css" rel="stylesheet")
+    link(href="css/main.css" rel="stylesheet")
     link(href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css')
 
     script(src="js/jquery.js")
@@ -397,7 +396,7 @@ html
               P Lorem ipsum dolor sit amet, consectur adipiscing ing elit, sed do...
               p.precio Read more...
         .row
-          .container
+          .container.bottom
             .col-md-4
               .box-span.text-center
                 .row
@@ -422,3 +421,100 @@ html
                   .col-md-10
                     h4 30 DAYS MONEY BACK 100%
                     p Satisfaction Guarantee
+    section.footer
+      .footer
+        .row
+          .container
+            .col-md-3
+              h4 ACCESORIES
+              p.grey Lorem ipsum dolor sit amet, consectetur adipisic ing elit, sed do eiusmod tempor incididunt ut labor et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco laboris
+              .text-center
+                button.contact
+                  span.ion-social-facebook
+                button.contact
+                  span.ion-social-rss
+                button.contact
+                  span.ion-social-twitter
+                button.contact
+                  span.ion-social-skype
+                button.contact
+                  span.ion-social-dribbble
+            .col-md-2
+              h4 MY ACCOUNT
+              ul.mt-5.list-unstyled
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right 
+                  p.grey.inline My Account
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Order History
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Wish List
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Newsletter
+            .col-md-2
+              h4 INFORMATION
+              ul.mt-5.list-unstyled
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right 
+                  p.grey.inline About US
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Delivery Information
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Privacy Policy
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Terms & Conditions
+            .col-md-2
+              h4 EXTRAS
+              ul.mt-5.list-unstyled
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right 
+                  p.grey.inline Brands
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Gift Vouchers
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Affiliates
+                li.mb-7
+                  span.glyphicon.glyphicon-triangle-right
+                  p.grey.inline Specials
+            .col-md-3
+              h4 ABOUT US
+              .row.mt-10
+                .col-md-2
+                  button.about
+                    span.ion-ios-location
+                .col-md-10
+                  ul.list-unstyled
+                    li.grey 8901 Marmora Road, Glasgow DO4 89
+                    li.grey GR, New York
+              .row
+                .col-md-2
+                  button.about
+                    span.ion-ios-telephone
+                .col-md-10
+                  ul.list-unstyled
+                    li.grey (0123)456789
+                    li.grey (0987)654321
+              .row
+                .col-md-2
+                  button.about
+                    span.ion-ios-email
+                .col-md-10    
+                  ul.list-unstyled.list-inline
+                    li.grey admin@bootexperts.com
+    section
+      .footer-small
+        .row
+          .container
+            .col-md-6
+              p Copyright 2015 BootExperts. All rights reserved.
+            .col-md-6
+              img.pull-right.img-responsive(src="../assets/images/payment.png")
+                    
